--- a/css/styles.css
+++ b/css/styles.css
@@ -349,9 +349,14 @@ a:hover {
     align-items:baseline;
 }
 
-/** CONTACTO */
+/** INFO4 */
 
-.imgContacto {
+.info4 {
+    height: 750px;
+    background: #FFF;
+}
+
+.imgInfo4-1 {
     width: 100%;
     height: 750px;
     display: flex;
@@ -360,14 +365,142 @@ a:hover {
     margin-top: 0px;
 }
 
-.textContacto1 {
-    font-family: Barlow;
-    font-weight: 700;
-    font-size: 50pt;
-    color:#FFF;
-    z-index: 1;
-    text-align: center;
+.imgInfo4-2 {
+    width: auto;
+    height: 170px;
+    border-radius:150px !important;
+    box-shadow: -4px 0px 20px rgb(179, 179, 179);
     margin-top: 150px !important;
+    margin-left: 50px;
+    position: relative;
+    z-index: 1;
+}
+
+.imgInfo4-3 {
+    width: auto;
+    height: 170px;
+    border-radius:150px !important;
+    box-shadow: -4px 0px 20px rgb(179, 179, 179);
+    margin-top: 5px !important;
+    margin-left: 50px;
+    position: relative;
+    z-index: 1;
+}
+
+.textInfo4-1 {
+    font-family: Barlow;
+    font-size: 18pt;
+    font-weight: 500;
+    line-height: 28px;
+    position: relative;
+    border-width: 4px;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-style: solid;
+    border-color: #60c4ed;
+    margin-top: 175px !important;
+    padding-left: 0px !important;
+    padding-bottom: 20px;
+}
+
+.textInfo4-2 {
+    font-family: Barlow;
+    font-size: 18pt;
+    font-weight: 500;
+    line-height: 28px;
+    position: relative;
+    margin-top: 20px !important;
+    padding-left: 0px !important;
+}
+
+.buttomInfo4 {
+    font-family: BorisBlackBloxx;
+    font-size: 13pt;
+    letter-spacing: 1px;
+    text-shadow: -1px 2px 3px rgb(112, 112, 112) !important;
+    color: #FFF;
+    text-align: center;
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
+    background: #60c4ed;
+    border-radius: 35px;
+    position: relative;
+    margin-top: 60px !important;
+}
+
+.space4 {
+    position: relative;
+}
+
+/** INFO5 */
+
+.info5 {
+    height: 750px;
+    background: #FFF;
+}
+
+.imgInfo5-1 {
+    width: 100%;
+    height: 750px;
+    display: flex;
+    z-index: 0;
+    position: absolute;
+    margin-top: 0px;
+}
+
+.textInfo5-1 {
+    font-family: BorisBlackBloxx;
+    font-size: 31pt;
+    font-weight: 800;
+    letter-spacing: 1px;
+    line-height: 65px;
+    background: linear-gradient(90deg, rgba(53, 225, 232, 1) 10%, rgba(221, 107, 250, 1) 50%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    word-wrap: break-word;
+    margin-top: 120px !important;
+    margin-left: -40px;
+    z-index: 1;
+}
+
+.imgInfo5-2 {
+    width: auto;
+    height: 115px;
+    border-radius:150px !important;
+    box-shadow: -4px 0px 20px rgb(179, 179, 179);
+    margin-top: 30px !important;
+    margin-bottom: 15px;
+    margin-left: -20px;
+    position: relative;
+    z-index: 1;
+}
+
+.textInfo5-2 {
+    font-family: Barlow;
+    font-size: 14.1pt;
+    font-weight: 700;
+    position: relative;
+    margin-left: 10px;
+    margin-top: 40px !important;
+    text-align: left;
+}
+
+.barInfo5 {
+    height: 3px;
+    width: 60px;
+    background: linear-gradient(90deg, rgba(53, 225, 232) 0%, rgba(221, 107, 250) 100%);
+    position: relative;
+}
+
+.textInfo5-3 {
+    font-family: Barlow;
+    font-size: 11pt;
+    font-weight: 600;
+    position: relative;
+    margin-left: 5px;
+    margin-top: 5px !important;
+
 }
 
 @media screen and (max-width: 1000px) {
