--- a/css/styles.css
+++ b/css/styles.css
@@ -36,23 +36,22 @@ a:hover {
 }
 
 .logoNavbar {
-    height: 35px;
+    height: 45px;
     width: auto;
 }
-
 
 .buttomNav {
     background-color: #FFF !important;
     margin-left: 2rem;
     border-style: solid;
     border-color: #FFF;
-    border-width: 1px !important;
+    border-width: 3px !important;
     border-radius: 7px !important;
     align-items: center;
     padding-top: 3px !important;
     padding-bottom: 3px !important;
-    padding-left: 20px !important;
-    padding-right: 20px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
 }
 
 .buttomNavLet {
@@ -65,21 +64,21 @@ a:hover {
     -webkit-text-fill-color: transparent;
     word-wrap: break-word;
     margin-bottom: 0px !important;
+    padding-left: 25px !important;
+    padding-right: 25px !important;
+
 }
 
 .buttomNav2 {
-    font-family: Barlow;
-    font-size: 15pt;
-    letter-spacing: 3px;
-    color: #000 !important;
-    background-color: rgba(255,255,255,1);
-    margin-left: 0.5cm;
-    padding-top: 0.1px !important;
-    padding-bottom: 0.1px !important;
-    border-color: #000;
-    border-width: 1px !important;
-    border-style: solid;
-    border-radius: 35px !important;
+    border: double 3px transparent !important;
+    border-radius: 7px !important;
+    background-image: linear-gradient(white, white), radial-gradient(circle at top left, #35e1e8, #dd6bfa);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    margin-left: 2rem;
+    align-items: center;
+    padding-top: 0px !important;
+    padding-bottom: 0.5px !important;
 }
 
 .container1 {
@@ -94,14 +93,14 @@ a:hover {
 }
 
 .container2 {
-    border-bottom-color: transparent;
+    border-bottom-color: rgb(177, 177, 177);
     border-bottom-style: solid;
     border-width: 3px;
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
     border-style: solid;
-    padding-bottom: 0.8cm;
+    padding-bottom: 1rem;
 }
 
 /** HOME */
@@ -481,7 +480,7 @@ a:hover {
     font-size: 14.1pt;
     font-weight: 700;
     position: relative;
-    margin-left: 10px;
+    margin-left: 5px;
     margin-top: 40px !important;
     text-align: left;
 }
@@ -501,6 +500,81 @@ a:hover {
     margin-left: 5px;
     margin-top: 5px !important;
 
+}
+
+/** INFOFINAL */
+
+.infoFinal {
+    height: 750px;
+    background: #FFF;
+}
+
+.imgInfoFinal1 {
+    position: relative;
+    width: 590px !important;
+    margin-top: 180px !important;
+}
+
+.imgSpaceFinal {
+    text-align: center;
+}
+
+.buttomInfo5 {
+    color: #FFF;
+    text-align: center;
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
+    background: rgba(0, 238, 255, 0.3);
+    border-radius: 60px;
+    position: relative;
+    margin-top: 25px !important;
+    width: 930px !important;
+    box-shadow: -2px 0px 29px rgba(0, 0, 0,0.1);
+}
+
+.textInfoFinal1 {
+    font-family: Barlow, sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 80pt;
+    letter-spacing: -2.8px;
+    color: transparent;
+    z-index: 1;
+    margin-top: 25px !important;
+    position: relative;
+    text-align: center;
+    text-shadow: -2px 0px 29px rgba(0, 0, 0,0.15);
+}
+
+.buttomInfo6 {
+    font-family: BorisBlackBloxx;
+    font-size: 19pt;
+    letter-spacing: 1px;
+    color: #FFF;
+    text-align: center;
+    padding-top: 0.8rem !important;
+    padding-bottom: 0.8rem !important;
+    background: #2babdf;
+    border-radius: 50px;
+    position: relative;
+    margin-top: 40px !important;
+    width: 330px !important;
+}
+
+.textInfoborder3 {   
+    -webkit-text-stroke: 4px #ffffff;
+    color: transparent;
+}
+
+.textInfoFinal2 {
+    font-family: Barlow;
+    font-size: 22pt;
+    font-weight: 700;
+    line-height: 38px;
+    color: #393939;
+    text-align: left !important;
+    margin-top: 15px !important;
+    margin-bottom: 15px !important;
 }
 
 @media screen and (max-width: 1000px) {
