--- a/css/styles.css
+++ b/css/styles.css
@@ -527,7 +527,7 @@ a:hover {
     text-align: center;
 }
 
-.buttomInfo5 {
+.buttomInfo5-1 {
     color: #FFF;
     text-align: center;
     padding-top: 1rem !important;
