--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,11 @@ body {
     border-color: #FFF !important;
 }
 
+.navbar-nav {
+    justify-content: end !important;
+    padding-left: 0px !important;
+}
+
 a {
     color: rgb(196, 196, 196);
 }
@@ -112,6 +117,7 @@ a:hover {
     display: flex;
     z-index: 0;
     position: absolute;
+
 }
 
 .containerHome {
@@ -626,9 +632,8 @@ a:hover {
         display: flex;
         margin-right: 0px !important;
         margin-left: 0px !important;
-    
     }
-    
+
     .text1 {
         font-family: BorisBlackBloxx;
         font-size: 30pt;
@@ -1215,13 +1220,41 @@ a:hover {
 
     .text1 {
         font-family: BorisBlackBloxx;
-        font-size: 19.5pt;
+        font-size: 30pt;
         line-height: 40px;
         color: #FFF;
         z-index: 1;
         position: relative;
-        margin-top: 200px !important;
+        margin-top: 250px !important;
         text-shadow: 0px 0px 10px rgba(0, 0, 0,0.6);
+        text-align: center;
+    }
+
+    .text3 {
+        font-family: Barlow;
+        font-weight: 700;
+        font-size: 12pt;
+        line-height: 18px;
+        color: #434244;
+        z-index: 1;
+        position: relative;
+        margin-left: 4px;
+        margin-top: 60px !important;
+    }
+    
+    .buttomHome {
+        font-family: BorisBlackBloxx;
+        font-size: 12pt;
+        letter-spacing: 1px;
+        color: #FFF;
+        text-align: center;
+        padding-top: 0.8rem;
+        padding-bottom: 0.8rem !important;
+        background: #ec6b76;
+        border-radius: 35px;
+        margin-top: 60px !important;
+        margin-left: 12px !important;
+        width: 250px !important;
     }
 
     /** INFO1 */
@@ -1237,15 +1270,15 @@ a:hover {
     
     .textInfo1 {
         font-family: BorisBlackBloxx;
-        font-size: 26pt;
+        font-size: 20pt;
         font-weight: 800;
         letter-spacing: 1.5px;
-        line-height: 45px;
+        line-height: 30px;
         background: linear-gradient(90deg, rgba(53, 225, 232, 1) 10%, rgba(221, 107, 250, 1) 50%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         word-wrap: break-word;
-        margin-top: 100px !important;
+        margin-top: 200px !important;
         z-index: 1;
     }
     
@@ -1253,35 +1286,38 @@ a:hover {
         font-family: Barlow, sans-serif;
         font-weight: 900;
         font-style: normal;
-        font-size: 18pt;
+        font-size: 15pt;
         letter-spacing: -1px;
+        line-height: 20px;
         color:#FFF;
         z-index: 1;
         margin-left: 3px;
-        margin-top: 15px !important;
+        margin-top: 3px !important;
     }
     
     .textInfoborder {   
-        -webkit-text-stroke: 2px #4b4b4b;
+        -webkit-text-stroke: 1.5px #4b4b4b;
         color: transparent;   
     }
     
     .textInfo3 {
         font-family: myriad-pro, sans-serif;
         font-weight: 700;
-        font-size: 13pt;
+        font-size: 12pt;
         font-style: normal;
-        color: #434244;
-        margin-top: 15px !important;
+        line-height: 15px;
+        color: #525252;
+        margin-top: 45px !important;
         margin-left: 2px;
         z-index: 1;
+        text-align: end;
     }
     
     .buttomInfo1 {
         font-family: BorisBlackBloxx;
-        font-size: 12pt;
+        font-size: 10pt;
         letter-spacing: 1px;
-        width: 300px!important;
+        width: 230px!important;
         color: #FFF;
         text-align: center;
         padding-top: 0.8rem;
@@ -1294,7 +1330,7 @@ a:hover {
     }
 
     .EspInfo1 {
-        justify-content: center;
+        justify-content: end;
         display: flex;
     }
 
@@ -1302,41 +1338,43 @@ a:hover {
 
     .textInfo2-1 {
         font-family: BorisBlackBloxx;
-        font-size: 26pt;
+        font-size: 22pt;
         font-weight: 800;
         letter-spacing: 1.5px;
-        line-height: 40px;
+        line-height: 30px;
         background: linear-gradient(90deg, rgba(53, 225, 232, 1) 10%, rgba(221, 107, 250, 1) 50%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         word-wrap: break-word;
-        margin-top: 50px !important;
+        margin-top: 170px !important;
         z-index: 1;
     }
 
     .textInfo2-2 {
         font-family: Barlow;
         font-weight: 800;
-        font-size: 16pt;
+        font-size: 10.5pt;
         color: #434244;
-        line-height: 35px;
+        line-height: 16px;
         margin-left: 4px;
-        margin-top: 15px !important;
+        margin-top: 5px !important;
     }
 
     .textInfo2-3 {
         font-family: Barlow;
         font-weight: 600;
-        font-size: 14pt;
+        font-size: 11pt;
         color: #434244;
-        line-height: 28px;
+        line-height: 15px;
         margin-left: 4px;
+        margin-top: 100px !important;
+        text-align: end;
     }
 
     .imgInfo2 {
-        margin-left: 0px;
-        margin-top: 30px !important;
-        width: 90%;
+        margin-left: -24px;
+        margin-top: 40px !important;
+        width: 115%;
     }
 
     /** INFO3 */
@@ -1345,20 +1383,26 @@ a:hover {
         font-family: BorisBlackBloxx, sans-serif;
         font-weight: 900;
         font-style: normal;
-        font-size: 20pt;
-        letter-spacing: -2.4px;
+        font-size: 21pt;
+        letter-spacing: -1.5px;
         color: transparent;
         z-index: 1;
-        margin-left: 3px;
+        margin-left: 0px;
+        margin-top: 0px !important;
         position: relative;
         text-align: center;
+    }
+
+    .textInfoborder2 {   
+        -webkit-text-stroke: 1.5px #ffffff;
+        color: transparent;
     }
     
     .imgLogo2 {
         z-index: 1;
         position: relative;
-        width: 72%;
-        margin-top: -40px !important;
+        width: 100%;
+        margin-top: -25px !important;
     }
 
     /** INFO4 */
@@ -1375,10 +1419,11 @@ a:hover {
         border-right: 0px;
         border-style: solid;
         border-color: #60c4ed;
-        margin-top: 60px !important;
+        margin-top: 100px !important;
         margin-left: 0px;
         padding-left: 0px !important;
-        padding-bottom: 20px;
+        padding-bottom: 50px;
+        text-align: center;
     }
 
     .textInfo4-2 {
@@ -1390,6 +1435,7 @@ a:hover {
         margin-top: 20px !important;
         margin-left: 0px;
         padding-left: 0px !important;
+        text-align: center;
     }
 
     .buttomInfo4 {
@@ -1404,7 +1450,7 @@ a:hover {
         background: #60c4ed;
         border-radius: 35px;
         position: relative;
-        margin-top: 40px !important;
+        margin-top: 80px !important;
         width: 320px;
     }
 
@@ -1481,8 +1527,8 @@ a:hover {
 
     .imgInfoFinal1 {
         position: relative;
-        width: 65% !important;
-        margin-top: 180px !important;
+        width: 80% !important;
+        margin-top: 220px !important;
     }
 
     .buttomInfo5-1 {
@@ -1502,7 +1548,7 @@ a:hover {
         font-family: Barlow, sans-serif;
         font-weight: 900;
         font-style: normal;
-        font-size: 37pt;
+        font-size: 24pt;
         letter-spacing: -2.8px;
         color: transparent;
         z-index: 1;
@@ -1513,7 +1559,7 @@ a:hover {
 
     .buttomInfo6 {
         font-family: BorisBlackBloxx;
-        font-size: 18pt;
+        font-size: 16pt;
         letter-spacing: 1px;
         color: #FFF;
         text-align: center;
@@ -1523,12 +1569,12 @@ a:hover {
         border-radius: 50px;
         position: relative;
         margin-top: 40px !important;
-        width: 330px !important;
+        width: 250px !important;
         box-shadow: 0px 0px 29px rgba(0, 0, 0,0.5);
     }
 
     .textInfoborder3 {   
-        -webkit-text-stroke: 3px #ffffff;
+        -webkit-text-stroke: 2px #ffffff;
         color: transparent;
         align-items: center;
         display: flex;
@@ -1536,9 +1582,9 @@ a:hover {
 
     .textInfoFinal2 {
         font-family: Barlow;
-        font-size: 12pt;
+        font-size: 11pt;
         font-weight: 700;
-        line-height: 25px;
+        line-height: 20px;
         color: #393939;
         text-align: left !important;
         margin-top: 15px !important;
