--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,8 @@ body {
 
 @font-face{
     font-family: BorisBlackBloxx;
-    src: url(BorisBlackBloxx.ttf)
+    src: url(BorisBlackBloxx.ttf);
+    font-weight: SemiBold;
 }
 
 /** NAVBAR */
@@ -1221,6 +1222,7 @@ a:hover {
     .text1 {
         font-family: BorisBlackBloxx;
         font-size: 30pt;
+        font-weight: 700;
         line-height: 40px;
         color: #FFF;
         z-index: 1;
@@ -1238,7 +1240,7 @@ a:hover {
         color: #434244;
         z-index: 1;
         position: relative;
-        margin-left: 4px;
+        margin-left: 0px;
         margin-top: 60px !important;
     }
     
@@ -1308,7 +1310,7 @@ a:hover {
         line-height: 15px;
         color: #525252;
         margin-top: 45px !important;
-        margin-left: 2px;
+        margin-left: 20px !important;
         z-index: 1;
         text-align: end;
     }
@@ -1338,7 +1340,7 @@ a:hover {
 
     .textInfo2-1 {
         font-family: BorisBlackBloxx;
-        font-size: 22pt;
+        font-size: 20pt;
         font-weight: 800;
         letter-spacing: 1.5px;
         line-height: 30px;
@@ -1366,7 +1368,7 @@ a:hover {
         font-size: 11pt;
         color: #434244;
         line-height: 15px;
-        margin-left: 4px;
+        margin-left: 20px;
         margin-top: 100px !important;
         text-align: end;
     }
@@ -1384,7 +1386,7 @@ a:hover {
         font-weight: 900;
         font-style: normal;
         font-size: 21pt;
-        letter-spacing: -1.5px;
+        letter-spacing: 0px;
         color: transparent;
         z-index: 1;
         margin-left: 0px;
@@ -1488,7 +1490,7 @@ a:hover {
         box-shadow: -4px 0px 20px rgb(179, 179, 179);
         margin-top: 0px !important;
         margin-bottom: 5px;
-        margin-left: -10px;
+        margin-left: 15px;
         position: relative;
         z-index: 1;
     }
